--- a/php/todo-list-project/assets/css/style.css
+++ b/php/todo-list-project/assets/css/style.css
@@ -104,3 +104,41 @@ body {
 .task button.edit {
   background-color: #3d9afb;
 }
+
+/* Alert Messages  */
+.alert {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.alert-success {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+.alert-danger {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
+
+.alert .close {
+  cursor: pointer;
+  float: right;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  filter: alpha(opacity=20);
+  opacity: 0.2;
+  text-decoration: none !important;
+  font-size: 18px;
+  line-height: 1.2;
+  position: relative;
+  top: -2px;
+  right: -10px;
+  color: inherit;
+}
